add link to documentation

--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 Online DEMO:
 http://cnmc.tw/~buganini/bsdconv.php
 
+Documentation:
+http://www.slideshare.net/Buganini/bsdconv
+
 --
 Table format:
 from<tab>to
