--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -13,7 +13,7 @@
 	\section{Syntax}
 		\subsection{Phases \& Cascade}
 			\paragraph{}
-			There are three types of co1nversion phases defined in bsdconv: \textbf{from}, \textbf{inter}, \textbf{to}. The \textbf{from} phase takes byte sequence and decodes it into a list of code points, on the other hand, the \textbf{to} phase encodes the list of code points back to byte sequence. The \textbf{inter} phase does code point to code point mapping.
+			There are three types of conversion phases defined in bsdconv: \textbf{from}, \textbf{inter}, \textbf{to}. The \textbf{from} phase takes byte sequence and decodes it into a list of code points, on the other hand, the \textbf{to} phase encodes the list of code points back to byte sequence. The \textbf{inter} phase does code point to code point mapping.
 			\paragraph{}
 			A basic conversion consists of \textbf{from} and \textbf{to} phases. Search of codec name is case insensitive.
 			\begin{figure}[H]
