--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -38,7 +38,7 @@
 			\end{figure}
 			
 			\paragraph{}
-			Between \textbf{from} and \textbf{to} phases, we can have a \textbf{inter} phase.
+			Between \textbf{from} and \textbf{to} phases, we can have an \textbf{inter} phase.
 			\begin{figure}[H]
 				\centering
 				\begin{tikzpicture}[auto,node distance=0,on grid=false]			
@@ -96,7 +96,7 @@
 			\end{figure}
 
 			\paragraph{}
-			A \textbf{inter} phase can be used standalonely, mostly in programmatic way.
+			An \textbf{inter} phase can be used standalonely, mostly in programmatic way.
 			\begin{figure}[H]
 				\centering
 				\begin{tikzpicture}[auto,node distance=0,on grid=false]
