--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -310,7 +310,7 @@
 			\paragraph{}
 			A code point packet carries its own flags. Currently there are two types of flag, \textbf{FREE} and \textbf{SKIP}. Flag \textbf{FREE} indicates that the packet buffer needs to be recycled or released, this is used only when programming is involved. Flag \textbf{SKIP} is (currently only) added by codec to/UNICODE and used by codec from/SKIP to identify which packets have already been decoded and needs to be passed through in \textbf{from} phase. 
 			\paragraph{}
-			The code point packets structure is retained, including flags, within cascaded conversions, but not for shell pipe. Figure 11 demonstrate the flow of converion "ESCAPE:UNICODE,BYTE$|$SKIP,UTF-8:UTF-8".
+			The code point packets structure is retained, including flags, within cascaded conversions, but not for shell pipe. Figure 11 demonstrate the flow of conversion "ESCAPE:UNICODE,BYTE$|$SKIP,UTF-8:UTF-8".
 				\begin{figure}[H]
 					\centering
 					\begin{tikzpicture}[auto,node distance=0.5cm,on grid=false]
