--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@
 	support "codec#key&key=value" style argument
 	replace from/3f and from/sub with from/any
 	replace to/3f with to/any
+	replace to/UNICODE and to/ANSI-CONTROL with alias to to/PASS#MARK&FOR={UNICODE,1,ANSI,1B}
+	replace from/SKIP with alias to from/PASS#UNMARK
 	replace to/ASCII-ESCAPE-UNICODE with alias to ESCAPE#...
 	replace to/ASCII-HEX-HTML-ENTITY with alias to ESCAPE#...
 	add to/ASCII-DEC-HTML-ENTITY alias to ESCAPE#...
