--- a/Todo
+++ b/Todo
@@ -1,2 +1,3 @@
-Use alias in bsdconv_{insert,replace}_{phase,codec}
-update score table
+test CNS11643
+stringify bsdconv_{insert,replace}_{phase,codec}
+bsdconv-manupdate score table
