--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@
 	replace to/ASCII-ESCAPE-UNICODE with alias to ESCAPE#...
 	replace to/ASCII-HEX-HTML-ENTITY with alias to ESCAPE#...
 	add to/ASCII-DEC-HTML-ENTITY alias to ESCAPE#...
+	deprecate bsdconv_duplicate()
 
 9.1:
 	bash completion script (buggy)
