--- a/README
+++ b/README
@@ -64,4 +64,5 @@ set BSDCONV_PATH environment variable to your path.
 Run setEnvVar.bat as administrator could help you set proper environment variables.
 
 --
-[![Donate](https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif)](https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=XLGVJ76ZAYKC2)
+Dotate:
+https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=XLGVJ76ZAYKC2
