--- a/README
+++ b/README
@@ -64,5 +64,5 @@ set BSDCONV_PATH environment variable to your path.
 Run setEnvVar.bat as administrator could help you set proper environment variables.
 
 --
-Dotate:
+Donate:
 https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=XLGVJ76ZAYKC2
