--- a/codecs/to/PASS.man
+++ b/codecs/to/PASS.man
@@ -10,4 +10,4 @@ ARGUMENT
 		DESC	Add "MARK" flag
 	FOR
 		FORMAT	ENUM{UNICODE,1,CNS11643,2,BYTE,3,ANSI,1B}
-		DESC	Input type whitelist
+		DESC	Output type whitelist
