--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 10.1:
 	add man page for inter/AMBIGUOUS-PAD and inter/AMBIGUOUS-UNPAD
-	add inter/{NFC,NFD,NFKC,NFKD}
+	add inter/{NFC,NFD,NFKC,NFKD} #UnicodeData
+	improve inter/{UPPER,LOWER} #UnicodeData
 
 10.0:
 	support "codec#key&key=value" style argument
