update figure caption

--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -414,7 +414,7 @@ basicstyle=\ttfamily
 						\draw [->] (internal4) -- (output);
 
 					\end{tikzpicture}
-					\caption{Flag, to/UNICODE \& from/SKIP}
+					\caption{Flag, from/PASS \& to/PASS}
 				\end{figure}
 				
 		\subsection{Helper codecs}
