--- a/codecs/from/ANY.man
+++ b/codecs/from/ANY.man
@@ -8,7 +8,7 @@ OUTPUT
 
 ARGUMENT
 	ERROR
-		DESC	Increase error counter
+		DESC	Increase counter (IERR if no counter name specified)
 	$HexValue
 		DESC	Output value
 		EXAMPLE	013F
