--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -527,7 +527,7 @@ struct bsdconv_counter_entry{
 	struct bsdconv_counter_entry *next;
 };
 			\end{lstlisting}
-			Counter IERR/OERR are mandatory error counters.
+			IERR and OERR are mandatory error counters.
 			
 		\subsection{Memory pool issue}
 			\paragraph{}
