reorganize internal helper function: str2datum, str2data

--- a/codecs/to/ANY.man
+++ b/codecs/to/ANY.man
@@ -9,6 +9,6 @@ OUTPUT
 ARGUMENT
 	ERROR
 		DESC	Increase counter (OERR if no counter name specified)
-	$HexValue
+	$HexValueList
 		DESC	Output value
 		EXAMPLE	3F
