--- a/codecs/from/ANY.man
+++ b/codecs/from/ANY.man
@@ -9,6 +9,6 @@ OUTPUT
 ARGUMENT
 	ERROR
 		DESC	Increase counter (IERR if no counter name specified)
-	$HexValue
+	$HexValueList
 		DESC	Output value
 		EXAMPLE	013F
