set pdf metadata and add link for TOC

--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -11,6 +11,13 @@ basicstyle=\ttfamily
 \usetikzlibrary{decorations.pathreplacing}
 \usetikzlibrary{positioning}
 \usetikzlibrary{shapes}
+\usepackage[
+	pdfauthor={Buganini Q},
+	pdftitle={BSDCONV}]{hyperref}
+\hypersetup{
+	colorlinks=false,
+	pdfborder={0 0 0}
+}
 \title{BSDCONV}
 \author{Kuan-Chung Chiu\\(buganini at gmail dot com)}
 \date{}
