--- a/README
+++ b/README
@@ -42,7 +42,7 @@ Decode javascript escaped data (byte/unicode mixed) like %u9644%20
 > bsdconv 'escape,byte:unicode,byte|skip,ascii:utf-8'
 
 Generate string for fuzzy comparison #collation is still required
-> echo ¼ℌăǅⓐ⁹灣湾ド鬒鬒æß | bsdconv UTF-8:ZH_FUZZY_TW:KANA_PHONETIC:NFC:NFD:NFKC:NFKD:NFD:LOWER:UTF-8
+> echo ¼ℌăǅⓐ⁹灣湾ド鬒鬒æß | bsdconv UTF-8:ZH_FUZZY_TW:KANA_PHONETIC:NFKD:NFD:LOWER:UTF-8
 1⁄4hădža9灣灣do鬒鬒æß
 
 More example:
