--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -551,7 +551,7 @@ struct bsdconv_counter_entry{
 			\end{lstlisting}
 			IERR and OERR are mandatory error counters.
 			\newpage\noindent
-			There are two API to get/reset counter(s):
+			There are two APIs to get/reset counter(s):
 			\begin{lstlisting}
 bsdconv_counter_t * bsdconv_counter(char *name);
 			\end{lstlisting}
