update definition for bsdconv_counter_entry

--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -546,7 +546,7 @@ bsdconv_destroy(ins);
 			\begin{lstlisting}
 struct bsdconv_counter_entry{
 	char *key;
-	counter_t val;
+	bsdconv_counter_t val;
 	struct bsdconv_counter_entry *next;
 };
 			\end{lstlisting}
