ins.counter instead of ins.counters

--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -542,7 +542,7 @@ bsdconv_destroy(ins);
 				Output will be discard. This is usually used with evaluating conversion (see section 3.4).
 
 		\subsection{Counters}
-			Counters are listed in ins-$>$counters in linked-list with following structure.
+			Counters are listed in ins-$>$counter in linked-list with following structure.
 			\begin{lstlisting}
 struct bsdconv_counter_entry{
 	char *key;
