--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+11.3:
+	Update inter/SCORE, inter/SCORE_TRAIN, with manpages.
+
 11.2:
 	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
 	add inter/CASEFOLD (C/F in CASEFOLD.txt)
